--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
                },
      },
   "cmake.buildBeforeRun": true,  "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
-  "cortex-debug.openocdPath": "${env:PICO_SDK_PATH}/../openocd/src/openocd",
   "cmake.sourceDirectory": "${workspaceFolder}/example",
+  "cortex-debug.openocdPath.windows": "${env:PICO_SDK_PATH}/..\\tools\\openocd-picoprobe",
+  "cortex-debug.openocdPath.osx": "${env:PICO_SDK_PATH}/../openocd/src/openocd",
+  "cortex-debug.openocdPath": "",
 }
